--- a/packages/eslint-config-node18/package.json
+++ b/packages/eslint-config-node18/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "eslint-config-custom",
-  "version": "0.0.0",
+  "name": "eslint-config-node18",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "eslint": "^8.37.0",
-    "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "7.32.2",
     "eslint-config-turbo": "latest"
   },
   "devDependencies": {
