--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,10 +1,11 @@
 {
   "name": "tsconfig",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "private": true,
   "files": [
     "base.json",
     "nextjs.json",
+    "node18.json",
     "react-library.json"
   ]
 }
