--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -87,5 +87,6 @@ jobs:
             cd ~/home/git/deployment-test
             git pull origin master
             git status
-            pnpm install --only=prod
-            pm2 restart node1      
+            pnpm install
+            pnpm build
+            pm2 restart node1
