--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,4 @@
-#
-# NOTE: keep this synced with standard repo's config
-#
-
-name: Deploy
+name: Node.js CI/CD
 on:
   workflow_dispatch:
   push:
@@ -37,8 +33,7 @@ env:
   TZ: "America/New_York"
 
 jobs:
-  ci:
-    name: CI
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -72,10 +67,14 @@ jobs:
       - name: Build
         run: pnpm run build
 
-      # TODO: solve flaky tests
-      # - name: Test
-      #   run: pnpm run test
+      - name: Test
+        run: pnpm run test
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/main'
+    steps:
       - name: Deploy using ssh
         uses: appleboy/ssh-action@master
         with:
@@ -87,6 +86,8 @@ jobs:
             cd ~/home/git/deployment-test
             git pull origin master
             git status
+            pnpm prune
             pnpm install
-            pnpm build
+            pnpm run build
             pm2 restart server
+            pm2 reload all
