--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
-    "lint": "eslint --ext .ts src/"
+    "lint": "eslint --ext .ts src/",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "keywords": [],
   "author": "",
@@ -16,14 +17,14 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "8.37.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "8.38.0",
     "eslint-config-node18": "workspace:*",
-    "eslint-import-resolver-typescript": "^3.5.4",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "tsconfig": "workspace:*",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   }
 }
