--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
-    "next": "^13.2.4",
+    "next": "^13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ui": "workspace:*"
@@ -17,11 +18,11 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "eslint-config-custom": "workspace:*",
-    "eslint": "8.37.0",
+    "eslint": "8.38.0",
     "tsconfig": "workspace:*",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   }
 }
