--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "pnpm --filter backend start",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "test": "turbo run test",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prettier:check": "prettier --check .",
     "ncu": "ncu -u --deep -x rimraf",
@@ -19,7 +20,7 @@
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "prettier": "latest",
-    "rimraf": "3.0.2",    
+    "rimraf": "5.0.0",
     "turbo": "latest"
   },
   "engines": {
