--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -83,7 +83,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            cd ~/home/git/deployment-test
+            cd ~/deployment-test
             git pull origin master
             git status
             pnpm prune
