--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -65,7 +65,8 @@ jobs:
         run: pnpm run lint
 
       - name: Build
-        run: pnpm run build
+        run: |
+          pnpm run build
 
       - name: Test
         run: pnpm run test
