--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - '.changeset/**'
+      - 'apps/**'
       - 'packages/**'
       - '!examples/**'
       - '!.github/**'
@@ -20,6 +21,7 @@ on:
       - main
     paths:
       - '.changeset/**'
+      - 'apps/**'
       - 'packages/**'
       - '!examples/**'
       - '!.github/**'
