--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -87,10 +87,11 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             cd ~/deployment-test
-            git pull origin master
+            git pull
             git status
             pnpm prune
             pnpm install
             pnpm run build
             pm2 restart server
+            pm2 restart nextjs
             pm2 reload all
